--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ jobs:
     strategy:
       matrix:
         servers: [ubuntu-latest, macos-latest]
+        python-version: ['3.8']  # 指定要测试的 Python 版本
     runs-on: ${{matrix.servers}}
     steps:
       - name: Checkout repo
